// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App React component Matches snapshot 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <h1
        className="App-title"
      >
        Welcome to the Alluxio Shared Web Application
      </h1>
    </header>
    <div
      className="App-intro"
    >
      This will contain reusable components for other web applications.
    </div>
    <div>
      Control list:
      <LoadingMessage>
        <div
          className="loadingMessage text-center"
        >
          <img
            className="loadingMessageSpin"
            src="alluxio-mark-tight-sm.svg"
          />
          <br />
          <h5
            className=""
          >
            Please wait...
          </h5>
        </div>
      </LoadingMessage>
    </div>
  </div>
</App>
`;

exports[`App Shallow component Matches snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <h1
      className="App-title"
    >
      Welcome to the Alluxio Shared Web Application
    </h1>
  </header>
  <div
    className="App-intro"
  >
    This will contain reusable components for other web applications.
  </div>
  <div>
    Control list:
    <LoadingMessage />
  </div>
</div>
`;
